Added more descriptions

--- a/part2_post-training-quantization.ipynb
+++ b/part2_post-training-quantization.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "excess-advice",
+   "metadata": {},
+   "source": [
+    "# Post Training Quantization with QKeras"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "hawaiian-tribune",
@@ -21,6 +29,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "voluntary-gibraltar",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Activation, BatchNormalization\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.regularizers import l1\n",
+    "from callbacks import all_callbacks\n",
+    "from qkeras import *\n",
+    "from qkeras.utils import model_quantize\n",
+    "from tensorflow.keras.models import load_model"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "blond-network",
    "metadata": {},
@@ -30,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "nuclear-prisoner",
    "metadata": {},
    "outputs": [],
@@ -47,7 +72,13 @@
    "id": "fatal-publication",
    "metadata": {},
    "source": [
-    "## Load the pre-trained model"
+    "## Load the pre-trained model\n",
+    "The model is trained with jet-tagging open datase: `hls4ml_lhc_jets_hlf`.\n",
+    "\n",
+    "We used 3 hidden layers with 64, then 32, then 32 neurons. Each layer will use relu activation. Add an output layer with 5 neurons (one for each class), then finish with Softmax activation.\n",
+    "\n",
+    "Look at the **training notebook** to see the details:\n",
+    "https://github.com/elhamekhoda/quantization-demo/blob/main/part1_karas_training.ipynb\n"
    ]
   },
   {
@@ -72,23 +103,6 @@
     "https://github.com/google/qkeras\n",
     "\n",
     "It is maintained by Google and we recently added support for QKeras model to hls4ml."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "joined-inspiration",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Activation, BatchNormalization\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.regularizers import l1\n",
-    "from callbacks import all_callbacks\n",
-    "from qkeras import *\n",
-    "from qkeras.utils import model_quantize\n",
-    "from tensorflow.keras.models import load_model"
    ]
   },
   {
@@ -129,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "continued-tragedy",
    "metadata": {},
    "outputs": [
@@ -179,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "outside-arcade",
    "metadata": {},
    "outputs": [],
@@ -201,12 +215,13 @@
    "id": "understanding-mapping",
    "metadata": {},
    "source": [
-    "### Check model prediction"
+    "## Model prediction\n",
+    "The quantized  models are used for evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "fitted-integral",
    "metadata": {},
    "outputs": [],
@@ -216,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "homeless-snowboard",
    "metadata": {},
    "outputs": [],
@@ -235,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "driving-cathedral",
    "metadata": {},
    "outputs": [
@@ -251,10 +266,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f96dc710dd0>"
+       "<matplotlib.legend.Legend at 0x7fd90c5f29d0>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
